refactor: rename profiles to device profiles end-to-end
